feat: creates the route get /news/users/,  to list the news created by the logged in user
